# PgvectorSearch

./: README.md  pyproject.toml
db_project/: gin_score.py  graphics.py  scoring.py  utils.py
db_project/lstm/: data.py  main.py  models.py  query.py  train.py
db_project/sql/: gin_index.sql  indexing.sql  listening.py  quering.sql  trigger.sql  ts_vector.sql
db_project/transf/: main.py
db_project/word2vec/: main.py  query.py  tokenize_text.py
