[tool.poetry]
name = "db-project"
version = "0.1.0"
description = ""
authors = ["FedorovVlad <fedorovvladislav481@@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
gensim = "^4.3.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "^2.2.2"
psycopg2 = "^2.9.9"
scipy = "1.10.1"
spacy = "^3.7.4"
pgvector = "^0.2.5"
black = "^24.4.0"
torchtext = "^0.17.2"
isort = "^5.13.2"
pytorch-metric-learning = "^2.5.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
